fixed ClipShapeTest to check marlin settings (log) at runtime + fixed integration tests